Fixed wrap and positions

--- a/v1.0/_flexbox.scss
+++ b/v1.0/_flexbox.scss
@@ -21,7 +21,7 @@
     flex-wrap: wrap;
 
 }
-.reverse {
+.wrap-reverse {
     flex-wrap: wrap-reverse;
 }
 
