--- a/v1.0/_utils.scss
+++ b/v1.0/_utils.scss
@@ -222,14 +222,6 @@
     border: 4px solid;
 }
 
-.relative {
-    position: relative;
-}
-
-.absolute {
-    position: absolute;
-}
-
 .no-select {
     user-select: none;
 }
@@ -352,4 +344,18 @@
 }
 .overflow-visible {
     overflow: visible;
+}
+
+// Position
+.relative {
+    position: relative;
+}
+.absolute {
+    position: absolute;
+}
+.sticky {
+    position: sticky;
+}
+.static {
+    position: static;
 }
